--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "create-migration": "npx migrate-mongo create -f conf/migrations.js"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
-=======
     "@moebius/http-graceful-shutdown": "^1.1.0",
->>>>>>> 71ca2396 (Merge branch 'no_downtime')
     "archiver": "^3.1.1",
     "async": "^3.2.3",
     "bcrypt-nodejs": "0.0.3",
@@ -48,6 +45,7 @@
     "formidable": "^1.2.6",
     "fs-extra": "^8.1.0",
     "glob": "^7.2.0",
+    "git-json-merge": "^1.0.0",
     "grunt": "^1.4.1",
     "grunt-babel": "^8.0.0",
     "grunt-contrib-copy": "^1.0.0",
