--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@moebius/http-graceful-shutdown": "^1.1.0",
     "archiver": "^3.1.1",
     "async": "^3.2.3",
+    "axios": "^1.4.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.20.1",
     "bower": "^1.8.14",
