--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "glob": "^7.2.0",
     "git-json-merge": "^1.0.0",
     "grunt": "^1.4.1",
+    "grunt-cli": "^1.4.3",
     "grunt-babel": "^8.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-handlebars": "^2.0.0",
