replaced pin editor with zone editor

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build:prod": "grunt build:prod",
     "build": "grunt build",
     "build:dev": "grunt build:dev",
-    "build:translate": "grunt build:translate"
+    "build:translate": "grunt build:translate",
+    "build:less": "grunt less:dev"
   },
   "dependencies": {
     "@moebius/http-graceful-shutdown": "^1.1.0",
